refactor: chatService 수정