@@ -20,7 +20,6 @@ import com.team573.gongguri.domain.member.repository.MemberRepository;
 import com.team573.gongguri.global.exception.CustomException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.data.domain.PageRequest;
@@ -41,9 +40,11 @@ public class ChatService {
         Long roomId,
         ChatMessageRequestDto requestDto
     ) {
-        ChatMessage createdMessage = chatMessageRepository.save(
-            ChatMapper.toChatMessage(roomId, requestDto.nickname(), requestDto.content())
-        );
+        ChatMessage createdMessage = ChatMapper.toChatMessage(roomId, requestDto.nickname(),
+            requestDto.content());
+
+        chatMessageRepository.save(createdMessage);
+
         return ChatMapper.toChatMessageResponseDto(createdMessage);
     }
 
@@ -68,8 +69,8 @@ public class ChatService {
     }
 
     // 채팅방 참여자 제거
-    public void deleteChatParticipation(Long roomId, String email) {
-        Member member = memberRepository.findByEmail(email)
+    public void deleteChatParticipation(Long roomId, Long memberId) {
+        Member member = memberRepository.findById(memberId)
             .orElseThrow(() -> new CustomException(NOT_FOUND_MEMBER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
@@ -100,7 +101,7 @@ public class ChatService {
 
         return messages.stream()
             .map(ChatMapper::toChatMessageResponseDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Map<Long, String> getFirstMessageMap(List<Long> chatRoomIds) {
